fixing nav padding and margins for better fit on small screens

--- a/src/styl/components/nav.styl
+++ b/src/styl/components/nav.styl
@@ -10,7 +10,7 @@
   .container
     max-width: 920px
     margin: 0 auto
-    padding: 12px 20px 9px
+    padding: 12px 15px 9px
     position: relative
 
   a.nav-link
@@ -36,8 +36,8 @@
         margin-left: 0
 
     &:not(.logo)
-      margin-left: 20px
-      margin-top: 2px
+      margin-left: 15px
+      margin-top: 3px
       float: right
       font-size: 14px
 
